# s2n-tls-rs

./: README.md
rust/: Cargo.toml  Makefile  README.md
rust/benches/: handshake.rs  mod.rs  throughput.rs
rust/compliance/: generate_report.rs  mod.rs
rust/examples/: README.md  client.rs  demo_interop.sh  handshake_demo.rs  interop.rs  run_handshake_demo.sh  server.rs
rust/src/: api.rs  buffer.rs  crypto.rs  error.rs  ffi.rs  handshake.rs  io.rs  lib.rs  record.rs  security_policy.rs  state.rs  state_machine.rs  tls.rs  utils.rs
rust/src/api/: config.rs  connection.rs  mod.rs
rust/src/handshake/: certificate.rs  client_hello.rs  finished.rs  key_exchange.rs  key_schedule.rs  mod.rs  server_hello.rs
rust/tests/: README.md  mod.rs
rust/tests/compliance/: generate_report.sh  mod.rs  report.html
rust/tests/fuzzing/: differential_fuzzing.rs  mod.rs
rust/tests/integration/: api_tests.rs  mod.rs  state_machine_tests.rs
rust/tests/interop/: client_server_tests.rs  mod.rs
rust/tests/pems/: server.cert.pem  server.key.pem
rust/tests/property/: buffer_properties.rs  handshake_properties.rs  mod.rs  record_properties.proptest-regressions  record_properties.rs
rust/tests/snapshot/: buffer_snapshots.rs  handshake_snapshots.rs  mod.rs  record_snapshots.rs
rust/tests/unit/: api_tests.rs  buffer_tests.rs  certificate_tests.rs  client_handshake_tests.rs  crypto_tests.rs  error_tests.rs  ffi_tests.rs  finished_tests.rs  handshake_tests.rs  io_tests.rs  key_exchange_tests.rs  key_schedule_tests.rs  mod.rs  record_tests.rs  security_policy_tests.rs  state_tests.rs  (+1 more)
(+37 files in other folders)
